- fix: white space

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,3 +29,8 @@
   code {
     font-family: 'Source Code Pro', monospace !important;
   }
+
+  html {
+    height: 100%;
+    background-color: black;
+  }
